Corrected logo height on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -350,6 +350,7 @@ header {
 
                 .logo {
                     img {
+                        height: math.div($logo-height, 1.5);
                         width: math.div($logo-width, 1.5);
                     }
                 }
